# clamav-stream

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: release.yml  test.yml
src/: error.rs  lib.rs
tests/: integration_test.rs
