[package]
name = "clamav-stream"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["kaicoh <sumireminami@gmail.com>"]
keywords = ["clamav", "stream"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaicoh/clamav-stream"
documentation = "https://docs.rs/clamav-stream"
description = "Scan and consume byte streams"

[dependencies]
tokio-stream = "0.1.14"
bytes = "1"
pin-project = "1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
